- added lobby map and multiplayer session map. - Game instance to add console commands for hosting and joining

--- a/Base_MP_UE4.uproject
+++ b/Base_MP_UE4.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "Base_MP_UE4",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	]
 }
