--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,8 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
-EditorStartupMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
+GameDefaultMap=/Game/Maps/LobbyMap.LobbyMap
+EditorStartupMap=/Game/Maps/LobbyMap.LobbyMap
 GlobalDefaultGameMode="/Script/Base_MP_UE4.Base_MP_UE4GameMode"
+GameInstanceClass=/Script/Base_MP_UE4.BaseMPGameInstance
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_10
