transition between different menu working now and also joining a host/game functional now if host is available

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/LobbyMap.LobbyMap
-EditorStartupMap=/Game/Maps/LobbyMap.LobbyMap
+GameDefaultMap=/Game/MenuSystem/MainMenuLevel.MainMenuLevel
+EditorStartupMap=/Game/Maps/MultiplayerSessionMap.MultiplayerSessionMap
 GlobalDefaultGameMode="/Script/Base_MP_UE4.Base_MP_UE4GameMode"
 GameInstanceClass=/Script/Base_MP_UE4.BaseMPGameInstance
 
@@ -64,5 +64,3 @@ SyncSceneSmoothingFactor=0.000000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
-
-
