deleleted old menu system, reimported adjusted menu system

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/MenuSystem/MainMenuLevel.MainMenuLevel
+GameDefaultMap=/Game/MenuSystem/Maps/MainMenuLevel.MainMenuLevel
 EditorStartupMap=/Game/Maps/MultiplayerSessionMap.MultiplayerSessionMap
 GlobalDefaultGameMode="/Script/Base_MP_UE4.Base_MP_UE4GameMode"
-GameInstanceClass=/Script/Base_MP_UE4.BaseMPGameInstance
+GameInstanceClass=/Game/BaseMPGameInstance_BP.BaseMPGameInstance_BP_C
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_10
@@ -12,6 +12,12 @@ MinimumiOSVersion=IOS_10
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPerson",NewGameName="/Script/Base_MP_UE4")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonGameMode",NewClassName="Base_MP_UE4GameMode")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonCharacter",NewClassName="Base_MP_UE4Character")
+
+[CoreRedirects] 
++ClassRedirects=(MatchSubstring=True,OldName="/MenuSystem",NewName="/Base_MP_UE4") 
++EnumRedirects=(MatchSubstring=True,OldName="/MenuSystem",NewName="/Base_MP_UE4") 
++FunctionRedirects=(MatchSubstring=True,OldName="/MenuSystem",NewName="/Base_MP_UE4") 
++StructRedirects=(MatchSubstring=True,OldName="/MenuSystem",NewName="/Base_MP_UE4")
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -64,5 +70,3 @@ SyncSceneSmoothingFactor=0.000000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
-
-
