--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -28,6 +28,9 @@ AppliedDefaultGraphicsPerformance=Maximum
 [Audio]
 UnfocusedVolumeMultiplier=1.0
 
+[OnlineSubsystem]
+DefaultPlatformService=NULL
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
@@ -70,3 +73,5 @@ SyncSceneSmoothingFactor=0.000000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
+
+
