Join session (currently locally) using subsystem

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/MenuSystem/Maps/MainMenuLevel.MainMenuLevel
-EditorStartupMap=/Game/Maps/MultiplayerSessionMap.MultiplayerSessionMap
+EditorStartupMap=/Game/MenuSystem/Maps/MainMenuLevel.MainMenuLevel
 GlobalDefaultGameMode="/Script/Base_MP_UE4.Base_MP_UE4GameMode"
 GameInstanceClass=/Game/BaseMPGameInstance_BP.BaseMPGameInstance_BP_C
 
