made the servermenu list a bit  better visually and with additional data (host name, playercount

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -34,8 +34,9 @@ UnfocusedVolumeMultiplier=1.0
 [OnlineSubsystem]
 DefaultPlatformService=Steam
 
+; TURN TO TRUE FOR BUILDING
 [OnlineSubsystemSteam]
-bEnabled=true
+bEnabled=false
 SteamDevAppId=480
 
 [/Script/OnlineSubsystemSteam.SteamNetDriver]
