--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,9 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/MenuSystem/Maps/MainMenuLevel.MainMenuLevel
-EditorStartupMap=/Game/MenuSystem/Maps/MainMenuLevel.MainMenuLevel
+GameDefaultMap=/Game/MenuSystem/Maps/MainMenu.MainMenu
+EditorStartupMap=/Game/MenuSystem/Maps/MainMenu.MainMenu
 GlobalDefaultGameMode="/Script/Base_MP_UE4.Base_MP_UE4GameMode"
 GameInstanceClass=/Game/BaseMPGameInstance_BP.BaseMPGameInstance_BP_C
+TransitionMap=/Game/MenuSystem/Maps/Transition.Transition
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_10
@@ -84,5 +85,3 @@ SyncSceneSmoothingFactor=0.000000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
-
-
