--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/MenuSystem/Maps/MainMenu.MainMenu
-EditorStartupMap=/Game/MenuSystem/Maps/MainMenu.MainMenu
+EditorStartupMap=/Game/Maps/CarTestMap.CarTestMap
 GlobalDefaultGameMode="/Script/Base_MP_UE4.Base_MP_UE4GameMode"
 GameInstanceClass=/Game/BaseMPGameInstance_BP.BaseMPGameInstance_BP_C
 TransitionMap=/Game/MenuSystem/Maps/Transition.Transition
