Lots of bug fixes.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/MenuSystem/Maps/MainMenu.MainMenu
+GameDefaultMap=/Game/UI/MenuSystem/Maps/MainMenu.MainMenu
 EditorStartupMap=/Game/Maps/CarTestMap.CarTestMap
-GlobalDefaultGameMode="/Script/Base_MP_UE4.Base_MP_UE4GameMode"
+GlobalDefaultGameMode=/Script/Base_MP_UE4.Base_MP_UE4GameMode
 GameInstanceClass=/Game/BaseMPGameInstance_BP.BaseMPGameInstance_BP_C
 TransitionMap=/Game/MenuSystem/Maps/Transition.Transition
 
