- Added more animation assets - Sidestepping now implemented with movement and animations.

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -81,6 +81,15 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Skill 2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=X)
 +ActionMappings=(ActionName="Skill 3",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=C)
 +ActionMappings=(ActionName="Skill 4",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=V)
++ActionMappings=(ActionName="Dodge",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
++ActionMappings=(ActionName="SideStep_Forward",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=W)
++ActionMappings=(ActionName="SideStep_Backward",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=S)
++ActionMappings=(ActionName="SideStep_Left",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=A)
++ActionMappings=(ActionName="SideStep_Right",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=D)
++ActionMappings=(ActionName="Dodge_Forward",bShift=True,bCtrl=False,bAlt=False,bCmd=False,Key=W)
++ActionMappings=(ActionName="Dodge_Backward",bShift=True,bCtrl=False,bAlt=False,bCmd=False,Key=S)
++ActionMappings=(ActionName="Dodge_Left",bShift=True,bCtrl=False,bAlt=False,bCmd=False,Key=A)
++ActionMappings=(ActionName="Dodge_Right",bShift=True,bCtrl=False,bAlt=False,bCmd=False,Key=D)
 +AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=A)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=Gamepad_LeftX)
